# car_sales_prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
config/: config.py  config.yaml
notebooks/: dask_experiment.ipynb  data_research.ipynb
prediction_model_instance/: Model.py  load_data.py  load_model.py  queries.py  train_model.py
