[project]
name = "car-sales-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Tsapin",email = "aw3472@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "clearml (>=1.17.1,<2.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "distributed (>=2025.2.0,<2026.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "bokeh (>=3.6.3,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "optuna (>=4.2.1,<5.0.0)",
    "dask-ml (>=2025.1.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
